--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -11,23 +11,19 @@
 </head>
 
 <body>
-    <%- include('navbar') %>
+    
     <h1>Request Password Reset</h1>
     <% if(user) { %>
         <form action="user/changepassword/" method="post">
-        <label for="otp">OTP:</label>
-        <input type="otp" name="otp" id="otp" required/>
+                    
+            <label for="text">OTP:</label>
+            <input type="text" name="otp" id="otp" value="" placeholder="otp"/>
+                        
+            <label for="password">password:</label>
+            <input type="password" name="password" id="password" value="" placeholder="New Password"/>
 
-        <input type="password" name="password" id="password" value="" placeholder="New Password"/>
-        <label for="password">password:</label>
-
-        <label for="email">Email:</label>
-
-        <input type="email" name="email" id="email" value="" placeholder="New Password" />
-       
-
+            <label for="password">confirmpassword:</label>
         <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
-        <label for="password">confirmpassword:</label>
 
         </form>
        <% } else if (company) { %>
