--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -14,16 +14,14 @@
 </head>
 
 <body>
-  <%- include('navbar') %>
-  <section class="sectionregister">
-    <div class="form-box-regis">
-      <div class="form-value">
+ 
+  
 
-        <form action="user/resetpassword" method="post">
+        <form action="/user/resetpassword/<%= user.email %>" method="post">
 
           <div class="inputbox-regis">
-            <input type="email" id="email" name="email" placeholder="Enter Email"/>
             <label for="email">email</label>
+            <input type="email" id="email" name="email" placeholder="Enter Email"/>
           </div>
           <button type="submit" class="btn btn-primary">save</button>
 
@@ -31,13 +29,9 @@
 
         </form>
 
-      </div>
-    </div>
 
 
 
-
-  </section>
 
 </body>
 
