--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -23,7 +23,11 @@
         <label for="username">UserName</label>
         <input type="text" name="username" id="username" />
       </div>
-      
+      <div class="data">
+        <label for="image">image</label>
+        <input type="file" id="image" name="image" accept="image/*"/>
+  
+      </div>
       <div class="data">
         <label for="email">Email</label>
         <input type="email" name="email" id="email" />
