--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -14,7 +14,7 @@
     
     <h1>Request Password Reset</h1>
     <% if(user) { %>
-        <form action="user/changepassword/" method="post">
+        <form action="/user/changepassword/<%= user.id_user %>" method="post">
                     
             <label for="text">OTP:</label>
             <input type="text" name="otp" id="otp" value="" placeholder="otp"/>
@@ -24,7 +24,7 @@
 
             <label for="password">confirmpassword:</label>
         <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
-
+        <button type="submit">Submit</button>
         </form>
        <% } else if (company) { %>
 
