--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -28,7 +28,7 @@
 
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownuser">
           <li><a class="dropdown-item" href="/user/profile/<%= user.id_user %>">Profile</a></li>
-          <li><a class="dropdown-item" href="/user/resetpassword/<%= user.id_user %>">Forget</a></li>
+          <li><a class="dropdown-item" href="/user/resetpassword/<%= user.id_user %>">ResetPassword</a></li>
           <li><a class="dropdown-item" href="/logout">Logout</a></li>
           <!-- แก้ไขเว็ปได้ยังไม่ได้ทำ -->
         </ul>
