--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
               <label for="password">Password</label>
             </div>
             <div class="forget">
-              <label for=""><input type="checkbox">Remember Me <a href="#">Forget Password</a></label>
+              <label for=""><input type="checkbox">Remember Me <a href="/forget">Forget Password</a></label>
 
             </div>
             <button type="submit">Log in</button>
