update webpage but not success

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -74,8 +74,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownadmin">
               <li><a class="dropdown-item" href="/admin/profile/<%= admin.id_admin %>">Profile</a></li>
-              <li><a class="dropdown-item" href="/admin/profile/<%= admin.id_admin %>">EditWeb</a></li>
-              <li><a class="dropdown-item" href="/forgetpassword/<%= admin.id_admin %>">Forget</a></li>
+              <li><a class="dropdown-item" href="/admin/webpage/<%= admin.id_admin %>">EditWeb</a></li>
               <li><a class="dropdown-item" href="/logout">Logout</a></li>
               <!-- แก้ไขเว็ปได้ยังไม่ได้ทำ -->
             </ul>
