admin editweb success

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
                         <h5 class="card-title"><%= jobindex.name_job %></h5>
                         <p class="card-text"><%= jobindex.detail_work %></p>
                         <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">detailjob</a>
-                        <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a>
+                        <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
                         <a class="card-title"><%= jobindex.deadline_offer %> </a>
                       </div>
                     </div>
@@ -126,7 +126,7 @@
                           <h5 class="card-title"><%= jobindex.name_job %></h5>
                           <p class="card-text"><%= jobindex.detail_work %></p>
                           <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">detailjob</a>
-                          <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a>
+                          <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
                           <a class="card-title"><%= jobindex.deadline_offer %> </a>
                         </div>
                       </div>
@@ -169,7 +169,7 @@
                   <h5 class="card-title"><%= jobindex.name_job %></h5>
                   <p class="card-text"><%= jobindex.detail_work %></p>
                   <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">detailjob</a>
-                  <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a>
+                  <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
                   
                   <a class="card-title"><%= jobindex.deadline_offer %> </a>
                 </div>
