company regis good

--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -15,7 +15,7 @@
 
 <body>
  
-  
+  <% if(user) { %>
 
         <form action="/user/resetpassword/<%= user.email %>" method="post">
 
@@ -25,10 +25,20 @@
           </div>
           <button type="submit" class="btn btn-primary">save</button>
 
-
-
         </form>
+        <% } else if (company) { %>
+          <form action="/company/resetpassword/<%= company.email %>" method="post">
 
+            <div class="inputbox-regis">
+              <label for="email">email</label>
+              <input type="email" id="email" name="email" placeholder="Enter Email"/>
+            </div>
+            <button type="submit" class="btn btn-primary">save</button>
+  
+          </form>
+          <% }else { %>
+
+            <% } %>
 
 
 
