--- a/views/registerCompany.ejs
+++ b/views/registerCompany.ejs
@@ -51,17 +51,31 @@
     </div>
 
     <div class="data">
-      <label for="image">image</label>
-      <input type="file" id="image" name="image" accept="image/*"/>
+      <label for="image">Image</label>
+      <input type="file" id="image" name="image" accept="image/*" onchange="displayImage(event)">
+      <img id="imagePreview" src="/image/default.png" alt="Default Image" width="100" height="100">
+      <script>
+        function displayImage(event) {
+          const imagePreview = document.getElementById('imagePreview');
+          const file = event.target.files[0];
 
+          if (file) {
+            const reader = new FileReader();
+
+            reader.onload = function (e) {
+              imagePreview.src = e.target.result;
+            }
+
+            reader.readAsDataURL(file);
+          } else {
+            imagePreview.src = '/image/default.png'; // Set default image
+          }
+        }
+
+      </script>
     </div>
 
-    <!-- tell input -->
-    <div class="form-outline mb-4">
-      <label class="form-label" for="tell_company">Tell</label>
-      <input type="tell_company" name="tell_company" id="tell_company" class="form-control" />
-
-    </div>
+   
 
 
     <!-- userCompany input -->
@@ -87,6 +101,16 @@
     <div class="form-outline mb-4">
       <label class="form-label" for="province_company">ProvinceCompany</label>
       <input type="province_company" name="province_company" id="province_company" class="form-control" />
+    </div>
+
+
+    <div class="form-outline mb-4">
+      <label class="form-label" for="namecontact_company">namecontact_company</label>
+      <input type="namecontact_company" name="namecontact_company" id="namecontact_company" class="form-control" />
+    </div>
+    <div class="form-outline mb-4">
+      <label class="form-label" for="amphoe">amphoe</label>
+      <input type="amphoe" name="amphoe" id="amphoe" class="form-control" />
     </div>
 
     <!-- typeCompany input -->
