--- a/views/pdfemail.ejs
+++ b/views/pdfemail.ejs
@@ -1,27 +1,84 @@
 
-<!-- <p> <%= content[0].id_resume %> </p>
-<div class="btn btn-pink">
-  
-  <a class="text-my-own-color" > <%= content[0].id_resume %></a>
-  
-  
-</div>
-<p>
-  If you are not an applicant, please let us know immediately by replying to this email.
-</p> -->
-
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="pdfstyle.css">
-  
-  <!-- FONTS -->
+    <!-- FONTS -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
+<style>
+  
 
+/* General styles for all elements */
+* {
+  box-sizing: border-box;
+  transition: 0.35s ease;
+}
+
+/* Mixin for setting up display, position, and margin */
+/* Usage: .setup { @include setup(display, position, margin, top, right, bottom, left); } */
+.setup {
+  display: var(--display);
+  position: var(--position);
+  margin: var(--margin);
+  top: var(--top);
+  right: var(--right);
+  bottom: var(--bottom);
+  left: var(--left);
+}
+
+/* Mixin for setting up font properties */
+/* Usage: .font { @include font(font-family, font-size, letter-spacing, font-weight, line-height); } */
+.font {
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  letter-spacing: var(--letter-spacing);
+  font-weight: var(--font-weight);
+  line-height: var(--line-height);
+}
+
+/* Styles for body */
+body {
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 18px;
+  letter-spacing: 0;
+  font-weight: 400;
+  line-height: 28px;
+  background: url('http://kingofwallpapers.com/leaves/leaves-016.jpg') right no-repeat;
+  background-size: cover;
+}
+
+/* Pseudo-element styles for body */
+body::before {
+  content: "";
+  display: var(--display);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.92);
+}
+
+/* Other styles for elements */
+/* Add other styles as needed */
+
+/* Media query for smaller screens */
+@media screen and (max-width: 1150px) {
+  /* Styles for smaller screens */
+  .name {
+    color: white;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 38px;
+    letter-spacing: 6px;
+    font-weight: 100;
+    line-height: 48px;
+  }
+}
+
+</style>
 <!-- PAGE STUFF -->
 <div class="rela-block page">
     <div class="rela-block top-bar">
