--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+    <%- include('navbar') %>
     <h1>Request Password Reset</h1>
     <% if(user) { %>
         <form action="/user/changepassword/<%= user.id_user %>" method="post">
