--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -16,7 +16,7 @@
 <body>
  
   
-
+  <%- include('navbar') %>
         <form action="/forget/:email" method="post">
 
           <div class="inputbox-regis">
