--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -11,7 +11,7 @@
     <script src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
-  <%- include('navbar', { status: status}) %>
+  <%- include('navbar') %>
 
   <form action="/company/addjob_company/<%= company.id_company %>" method="post">
     
@@ -76,10 +76,15 @@
                 <input type="date" id="deadline_offer" name= "deadline_offer"/>
                 <label for="deadline_offer">deadline_offer</label>
                  </div>
+
+                 <div class="inputbox-regis">
+                  <ion-icon name="mail-outline"></ion-icon>
+                  <input type="hidden" id="id_company" name= "id_company"/>
+                  <label for="id_company">id_company</label>
+                   </div>
        
             
-        <button type="submit" class="btn btn-wanning">save</button>
-    
+        <button type="submit" class="btn btn-wanning">save</button>    
       </form>
 </body>
 
