--- a/views/forgetchangepassword.ejs
+++ b/views/forgetchangepassword.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <%- include('navbar') %>
     <h1>Request Password Reset</h1>
     <% if(user) { %>
         <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
