--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -41,9 +41,9 @@
           <li class="nav-item me-auto">
             <a class="nav-link" href="/company/addjob_company/<%= company.id_company %>">JobSerach(ค้นหาบริษัท)</a>
           </li>
-          <li class="nav-item me-auto">
+          <!-- <li class="nav-item me-auto">
             <a class="nav-link" href="/company/addjob_company/<%= company.id_company %>">Job</a>
-          </li>
+          </li> -->
           <li class="nav-item me-auto">
             <a class="nav-link" href="/company/addjob_company/<%= company.id_company %>">AddJob</a>
           </li>
