--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
- 
+  <%- include('navbar') %>
   <% if(user) { %>
 
         <form action="/user/resetpassword/<%= user.email %>" method="post">
