--- a/views/webpage.ejs
+++ b/views/webpage.ejs
@@ -9,29 +9,29 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 <body>
-  
-    <form action="/admin/editwebpage/<%= webpage.id_webpage %>" method="post">
+  <%- include('navbar') %>
+    <form action="/admin/editwebpage/<%= eweb.id_webpage %>" method="post">
         <!-- <img class="card" src="/image/<%= webpage.image %>" alt="webpage Logo"/> -->
 
 
         <div >
-          <input type="text" id="namepage"  name="namepage" value="<%= webpage.namepage %>"/>
+          <input type="text" id="namepage"  name="namepage" value="<%= eweb.namepage %>"/>
           <label for="namepage">namepage</label>
         </div>
         <div>
          <ion-icon name="mail-outline"></ion-icon>
-         <input type="text" id="address" name= "address" value="<%= webpage.address %>" />
+         <input type="text" id="address" name= "address" value="<%= eweb.address %>" />
          <label for="address">address</label>
           </div>
          
     
           <div >
-            <input type="text" id="email"  name="email" value="<%= webpage.email %>"/>
+            <input type="text" id="email"  name="email" value="<%= eweb.email %>"/>
             <label for="email">email</label>
           </div>
           <div >
            <ion-icon name="mail-outline"></ion-icon>
-           <input type="text" id="call" name= "call" value="<%= webpage.call %>"/>
+           <input type="text" id="call" name= "call" value="<%= eweb.call %>"/>
            <label for="call">call</label>
             </div>
     
