--- a/views/emailverify.ejs
+++ b/views/emailverify.ejs
@@ -2,34 +2,30 @@
 <html lang="en" dir="ltr">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <%- include('navbar') %>
-    <div class="container">
-       
-            <section class="pt-5">
-                <div class="container h-100">
-                    <div class="row d-flex justify-content-center align-items-center h-100">
-                        <div class="col-lg-12 col-xl-11">
-                            <div class="card text-black" style="border-radius: 25px;">
-                                <div class="card-body p-md-5">
-                                    <div class="row justify-content-center">
-                                        <div class="col-md-10 col-lg-6 col-xl-12 order-2 order-lg-1">
-                                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                                                Registration successful. Please check your email for verification.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        
-    </div>
+        <div class="container">
+
+
+            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
+                Registration successful. Please check your email for verification.
+            </p>
+
+
+
+        </div>
 </body>
 
 </html>
