admin ban and unban

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -66,7 +66,7 @@
               <a class="nav-link" href="#">Article</a>
             </li>
             <li class="nav-item me-auto">
-              <a class="nav-link" href="#">JobSearch</a>
+              <a class="nav-link" href="/admin/usermanagement/<%= admin.id_admin %>">usermanagement</a>
             </li>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownadmin" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
