admin ban and not show index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   
     <% if(status==="loggedIn") { %>
       
-      <% if(user) { %>
+      <% if(user && user.status ==="active") { %>
         
         <% if(jobindex.length > 0) { %>
           <% jobindex.forEach((jobindex) => {%>
