--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -63,7 +63,7 @@
 
           <% } else if(admin){ %>
             <li class="nav-item me-auto">
-              <a class="nav-link" href="#">Article</a>
+              <a class="nav-link" href="/admin/companymanagement/<%= admin.id_admin %>">companymanagement</a>
             </li>
             <li class="nav-item me-auto">
               <a class="nav-link" href="/admin/usermanagement/<%= admin.id_admin %>">usermanagement</a>
