test regisuser good

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,7 +33,7 @@
               
               <button type="submit" class="btn btn-primary">save</button>
             </form>
-           <% if (history == 'undefined' || history == null) { %>
+           <% if (history == 'undefined' || history == null || resume === 'undefined' || resume === null) { %>
         <p>adsadadasdads</p>
 
             <%}else {%>
