--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -28,18 +28,18 @@
         </form>
        <% } else if (company) { %>
 
-        <form action="company/changepassword/" method="post">
+        <form action="/company/changepassword/<%= company.id_company %>" method="post">
             <label for="otp">OTP:</label>
             <input type="otp" name="otp" id="otp" required>
 
+            <label for="password">password:</label>
             <input type="password" name="password" id="password" value="" placeholder="New Password"/>
-        <label for="password">password:</label>
 
+            <label for="password">confirmpassword:</label>
         <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
-        <label for="password">confirmpassword:</label>
 
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required>
+            <!-- <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required> -->
             <button type="submit">Submit</button>
         </form>
        <% }else { %>
