--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -57,7 +57,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdowncompany">
             <li><a class="dropdown-item" href="/company/profile/<%= company.id_company %>">Profile</a></li>
-            <li><a class="dropdown-item" href="/forgetpassword/<%= company.id_company %>">Forget</a></li>
+            <li><a class="dropdown-item" href="/company/resetpassword/<%= company.id_company %>">ResetPassword</a></li>
             <li><a class="dropdown-item" href="/logout">Logout</a></li>
           </ul>
 
